# agent-ops-local

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  index.html  package-lock.json  package.json  requirements.txt  run.bat
.github/workflows/: main.yml
backend/: __init__.py  database.py  main.py  models.py  schemas.py
backend/routers/: analytics.py  ingest.py
docs/superpowers/specs/: 2026-07-22-agentops-sdk-design.md
sdk/: README.md  conftest.py  pyproject.toml
sdk/agentops_local/: __init__.py  config.py  context.py  pricing.py  runtime.py  transport.py
sdk/agentops_local/instrument/: __init__.py  anthropic.py  base.py  openai.py
sdk/tests/: test_context.py  test_end_to_end.py  test_instrument.py  test_pricing.py  test_transport.py
src/: App.jsx
tests/: test_api.py  test_database.py
